agregacion de nuevos estilos  de sass mixin y funciones entre otros cambios nuevos

--- a/TransportesT.html
+++ b/TransportesT.html
@@ -15,6 +15,9 @@
 
 
     <br><br>
+    <!--Tenemos un menu para la navegacion de la pagina en la que tenemos las diferentes 
+    menus para poder navegar en la pagina.
+    -->
     <nav>
         <ul>
             <li><a class="active" href="index.html">Inicio</a></li>
@@ -23,6 +26,8 @@
         </ul>
     </nav>
     <section>
+        <!--Tenemos una seccion y dentro de ese card  un div donde esta una imagen con transiciones.-->
+        <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
         <div class="card">
             <h1 style="text-align: center;" class="animated infinite    slideOutLeft">Motocicletas</h1>
             <div class="div-imagen">
@@ -42,9 +47,10 @@
             </div>
         </div>
         <div class="card">
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
             <h1 class="animated infinite bounceInDown">Autobus</h1>
             <div class="div-imagen">
-
+                <!--tenemos la descripcion en cada card de los transportes.-->
                 <div style="text-align: center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 12px;">
                     <p style="text-align: left;">Tipo:terrestre</p>
                     <p style="text-align: left;">Marca:toyota</p>
@@ -63,6 +69,7 @@
         </div>
 
         <div class="card">
+            <!--En el h1 llega la que es la clase de animate es un libreria de css, ademas tiene un tamanio de fuente el titulo-->
             <h1 class="animated infinite slideOutUp">Bicicleta</h1>
             <div class="div-imagen">
 
